theme options z-index tweak + fixed animations

--- a/src/app/core/theming/theme-options/theme-options.scss
+++ b/src/app/core/theming/theme-options/theme-options.scss
@@ -5,7 +5,7 @@ $theme-panel-button-width: 48px;
     position: fixed;
     top: 160px;
     right: 0;
-    z-index: 48;
+    z-index: 50;
 
     #theme-options-panel {
         position: absolute;
